[package]
name = "me1-upk-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
walker = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bytes = "1.5"
binrw = "0.13"
regex = "1.10"
lazy_static = "1.4"
gltf = "1.1"
png = "0.17"
image = "0.24"
byteorder = "1.5"

[profile.release]
opt-level = 3
lto = true
